update weight-logs endpoint for weekly and monthly graphic
